# codex-trading-bot

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: data_sources.yml  feature_regimes.yml  horizons.yml  training.yml  universe.sample.yml
dashboard/: README.md
docs/: architecture.md  milestones.md  repository_tree.md
notebooks/: README.md
scripts/: run_baseline_experiment.py
src/: __init__.py
src/backtest/: __init__.py  simple.py
src/data/: __init__.py  base.py  calendar.py  fred.py  identifiers.py  missingness.py  pit.py  sec.py  storage.py  yahoo.py
src/evaluation/: __init__.py  metrics.py
src/features/: __init__.py  base.py  selection.py  technical.py
src/models/: __init__.py  dataset.py  registry.py  splits.py  training.py
src/signals/: __init__.py  rules.py
src/targets/: __init__.py  returns.py
src/utils/: config.py  env.py  logging.py
tests/: test_features_targets.py  test_models_backtest.py  test_pit_builder.py
