[project]
name = "stock-research-platform"
version = "0.1.0"
description = "Point-in-time stock forecasting research platform and dashboard scaffold."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "requests>=2.31",
  "scikit-learn>=1.3",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "jupyter>=1.0",
  "matplotlib>=3.8",
  "plotly>=5.20",
  "pyarrow>=14.0",
]
api = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
]
models = [
  "xgboost>=2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
